nohup.out
  File "NJVRprocessing.py", line 74
    for zipfile in onlyfiles:
                            ^
IndentationError: unindent does not match any outer indentation level
  File "NJVRprocessing.py", line 74
    for zipfile in onlyfiles:
                            ^
IndentationError: unindent does not match any outer indentation level
No handlers could be found for logger "rdflib.term"
BEGIN
['80.tar.gz', '54.tar.gz', '02.tar.gz', '59.tar.gz', '24.tar.gz', '36.tar.gz', '89.tar.gz', '62.tar.gz', '86.tar.gz', '14.tar.gz', '93.tar.gz', '33.tar.gz', '40.tar.gz', '99.tar.gz', '75.tar.gz', '68.tar.gz', '65.tar.gz', '25.tar.gz', '92.tar.gz', '96.tar.gz', '13.tar.gz', 'counts_out.csv', '09.tar.gz', '55.tar.gz', '12.tar.gz', '84.tar.gz', '34.tar.gz', '72.tar.gz', '05.tar.gz', '43.tar.gz', '15.tar.gz', '81.tar.gz', '41.tar.gz', '16.tar.gz', 'exceptions.txt', '74.tar.gz', '66.tar.gz', '53.tar.gz', '35.tar.gz', '27.tar.gz', '20.tar.gz', '83.tar.gz', '56.tar.gz', '10.tar.gz', '29.tar.gz', '94.tar.gz', '32.tar.gz', '85.tar.gz', '07.tar.gz', '06.tar.gz', '61.tar.gz', '08.tar.gz', '91.tar.gz', '78.tar.gz', 'combined_out.csv', '73.tar.gz', '44.tar.gz', '69.tar.gz', '47.tar.gz', '90.tar.gz', '28.tar.gz', '39.tar.gz', '49.tar.gz', '18.tar.gz', '11.tar.gz', '26.tar.gz', '22.tar.gz', '57.tar.gz', '19.tar.gz', '42.tar.gz', '67.tar.gz', '51.tar.gz', '98.tar.gz', '60.tar.gz', '46.tar.gz', '63.tar.gz', '30.tar.gz', '87.tar.gz', '50.tar.gz', 'predicate_out.csv', '52.tar.gz', 'objects_out.csv', '03.tar.gz', 'NJVRprocessing.py', '01.tar.gz', '76.tar.gz', '97.tar.gz', 'nohup.out', '31.tar.gz', '95.tar.gz', '38.tar.gz', '58.tar.gz', '64.tar.gz', '70.tar.gz', '71.tar.gz', '21.tar.gz', '00.tar.gz', '37.tar.gz', '17.tar.gz', '82.tar.gz', '48.tar.gz', '45.tar.gz', '77.tar.gz', '23.tar.gz', '04.tar.gz', '79.tar.gz', '88.tar.gz']
80.tar.gz
54.tar.gz
02.tar.gz
59.tar.gz
24.tar.gz
36.tar.gz
89.tar.gz
62.tar.gz
86.tar.gz
14.tar.gz
93.tar.gz
33.tar.gz
40.tar.gz
99.tar.gz
75.tar.gz
68.tar.gz
65.tar.gz
25.tar.gz
92.tar.gz
96.tar.gz
13.tar.gz
09.tar.gz
55.tar.gz
12.tar.gz
84.tar.gz
34.tar.gz
72.tar.gz
05.tar.gz
43.tar.gz
15.tar.gz
81.tar.gz
41.tar.gz
16.tar.gz
74.tar.gz
66.tar.gz
53.tar.gz
35.tar.gz
27.tar.gz
20.tar.gz
83.tar.gz
56.tar.gz
10.tar.gz
29.tar.gz
94.tar.gz
32.tar.gz
85.tar.gz
07.tar.gz
06.tar.gz
61.tar.gz
08.tar.gz
91.tar.gz
78.tar.gz
73.tar.gz
44.tar.gz
69.tar.gz
47.tar.gz
90.tar.gz
28.tar.gz
39.tar.gz
49.tar.gz
18.tar.gz
11.tar.gz
26.tar.gz
22.tar.gz
57.tar.gz
19.tar.gz
42.tar.gz
67.tar.gz
51.tar.gz
98.tar.gz
60.tar.gz
46.tar.gz
63.tar.gz
30.tar.gz
87.tar.gz
50.tar.gz
52.tar.gz
03.tar.gz
01.tar.gz
76.tar.gz
97.tar.gz
31.tar.gz
95.tar.gz
38.tar.gz
58.tar.gz
64.tar.gz
70.tar.gz
71.tar.gz
21.tar.gz
00.tar.gz
37.tar.gz
17.tar.gz
82.tar.gz
48.tar.gz
45.tar.gz
77.tar.gz
23.tar.gz
04.tar.gz
79.tar.gz
88.tar.gz
END
